# python-package-template

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: cicd.yaml  workflow.yaml
python_project_template/: __init__.py  __main__.py  __version__.py
tests/: conftest.py  test_placeholder.py
